// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should log os version error if wrong version of node is used 1`] = `
Array [
  "Generating build report for test_package@0.0.1. This may take a moment.",
  "Inspecting Dependencies",
  "Inspecting Magento Backend",
  "Inspecting System",
]
`;

exports[`should log os version error if wrong version of node is used 2`] = `
Array [
  "
",
  "Found 4 @magento dependencies in yarn.lock",
  "@magento/pwa-buildpack @ 7.0.0",
  "@adobe/apollo-link-mutation-queue @ 1.0.2",
  "@magento/peregrine @ 8.0.0",
  "@magento/venia-ui @ 5.0.0",
  "
",
  "Not using sample backend.",
  "Backend is UP!",
  "
",
  "OS:",
  "Unable to fetch OS Version.",
  "Node Version:",
  "Mock Node Version",
  "NPM Version:",
  "Mock NPM Version",
  "
",
]
`;

exports[`should log os version error if wrong version of node is used 3`] = `Array []`;

exports[`should log package info from package-lock.json file if yarn.lock is not available 1`] = `
Array [
  "Generating build report for test_package@0.0.1. This may take a moment.",
  "Inspecting Dependencies",
  "Inspecting Magento Backend",
  "Inspecting System",
]
`;

exports[`should log package info from package-lock.json file if yarn.lock is not available 2`] = `
Array [
  "
",
  "Found 4 @magento dependencies in package-lock.json",
  "@magento/pwa-buildpack @ file:../../pwa-studio/packages/pwa-buildpack/magento-pwa-buildpack-7.0.0.tgz",
  "@adobe/apollo-link-mutation-queue @ 1.0.2",
  "@magento/peregrine @ file:../../pwa-studio/packages/peregrine/magento-peregrine-8.0.0.tgz",
  "@magento/venia-ui @ file:../../pwa-studio/packages/venia-ui/magento-venia-ui-5.0.0.tgz",
  "
",
  "Not using sample backend.",
  "Backend is UP!",
  "
",
  "OS:",
  "Mock OS Version",
  "Node Version:",
  "Mock Node Version",
  "NPM Version:",
  "Mock NPM Version",
  "
",
]
`;

exports[`should log package info from package-lock.json file if yarn.lock is not available 3`] = `Array []`;

exports[`should log package info from yarn.lock file if available 1`] = `
Array [
  "Generating build report for test_package@0.0.1. This may take a moment.",
  "Inspecting Dependencies",
  "Inspecting Magento Backend",
  "Inspecting System",
]
`;

exports[`should log package info from yarn.lock file if available 2`] = `
Array [
  "
",
  "Found 4 @magento dependencies in yarn.lock",
  "@magento/pwa-buildpack @ 7.0.0",
  "@adobe/apollo-link-mutation-queue @ 1.0.2",
  "@magento/peregrine @ 8.0.0",
  "@magento/venia-ui @ 5.0.0",
  "
",
  "Not using sample backend.",
  "Backend is UP!",
  "
",
  "OS:",
  "Mock OS Version",
  "Node Version:",
  "Mock Node Version",
  "NPM Version:",
  "Mock NPM Version",
  "
",
]
`;

exports[`should log package info from yarn.lock file if available 3`] = `Array []`;

exports[`should return proper shape 1`] = `
Object {
  "command": "generate-build-report",
  "describe": "Generates a report of general build information that can be used when debugging an issue.",
  "handler": [Function],
}
`;

exports[`should throw error if package-lock.json and yarn.lock files are not available 1`] = `[Error: Dependencies have not been installed, please run \`yarn install\` or npm install\` then generate the build report again.]`;
